--- a/media-library-workspace/apps/media-library/src/index.html
+++ b/media-library-workspace/apps/media-library/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <media-library-workspace-root></media-library-workspace-root>
+    <app-root></app-root>
   </body>
 </html>
